# ekyc_service

./: .gitignore  README.md  app.py  container.py  docker-compose.yml  pyproject.toml
ekyc/common/: distance.py  functions.py
ekyc/config/mongodb/: mongodb_client.py
ekyc/config/s3/: s3_client.py
ekyc/controller/: ekyc_controller.py
ekyc/repository/: ekyc_repository.py  user_repository.py
ekyc/service/: account_service.py  common_service.py  ekyc_service.py
ekyc/service/face_check_service/: blink_detection.py  face_matching_service.py
